# LinkedIn_Post_Agent

./: .env.example  .gitignore  ARCHITECTURE_FIXES.md  AUDIT_FIXES_APPLIED.md  BACKGROUND_TASK_FIX.md  CHANGES_SUMMARY.md  DATABASE_SCHEMA.md  DATABASE_SETUP_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_READY.md  ENV_AND_CONFIG_FIXES.md  FIXES_APPLIED.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.txt  LLM_FALLBACK_AUDIT_REPORT.md  OAUTH_IMPLEMENTATION.md  PHASE_3_PIVOT_EXECUTION_LOG.md  PHASE_3_PIVOT_SUMMARY.md  PHASE_3_QUICK_REFERENCE.md  PHASE_3_SUMMARY.md  PHASE_4_EXECUTION_SUMMARY.md  PHASE_4_LANGGRAPH_AGENT.md  PHASE_4_QUICK_START.md  PHASE_5_EXECUTION.md  PHASE_6_FASTAPI_API.md  PHASE_8_IMAGE_GENERATION.md  PHASE_8_QUICK_START.md  PRODUCTION_AUDIT_REPORT.md  PROJECT_STATUS.md  QUICK_REFERENCE.md  README.md  README_IMPLEMENTATION.md  REFACTORING_SUMMARY.md  REFACTORING_THREE_STATUS_MODEL.md  SERVER_RUNNING.md  SETUP_DATABASE.md  STATUS_MODEL_QUICK_REFERENCE.md  SUPABASE_OAUTH_SETUP.md  alembic.ini  (+11 more)
.prompts/: phase-8.md  phase3_db.md  phase4_agent.md  phase5_agent.md  phase6_api.md  phase7.md
alembic/: env.py
alembic/versions/: 001_init_init_supabase_schema.py  002_add_missing_post_columns.py  003_add_post_status_enums.py  004_refactor_to_three_statuses.py  005_convert_status_enum_to_varchar.py  006_add_image_url_column.py  4de456a8dc17_add_observability_columns.py
app/Services/: image_generation.py  image_renderer.py  linkedin.py  linkedin_media.py  llm_fallback.py
app/agent/: edges.py  graph.py  nodes.py  state.py
app/agent/nodes/: __init__.py  draft.py  image_rendering.py  thought_generation.py  topic_selection.py  validation.py
app/api/: __init__.py  auth.py  dependencies.py  main.py  schemas.py
app/api/routers/: posts.py
app/core/: config.py  instrumentation.py
app/db/: __init__.py  database.py  models.py
assets/fonts/: Inter-SemiBold.txt
scripts/: fix_post_statuses.py
