[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "linkedin-agent"
version = "0.1.0"
description = "Enterprise LangGraph LinkedIn Content Agent"
requires-python = ">=3.11"
dependencies = [
    # ----------------------------------
    # API, Core & Configuration
    # ----------------------------------
    "fastapi>=0.116.0",
    "uvicorn[standard]>=0.35.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.10.0",
    "python-dotenv>=1.0.1",
    "email-validator>=2.2.0",
    "jinja2>=3.1.6",
    
    # ----------------------------------
    # LangGraph & LangChain Ecosystem
    # ----------------------------------
    "langgraph>=0.3.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    
    # ----------------------------------
    # LLM Providers & Agent Tools
    # ----------------------------------
    "langchain-openai>=0.2.0",
    "langchain-google-genai>=2.1.0",
    "google-generativeai>=0.8.0",
    "langchain-ollama>=0.3.0",
    "ollama>=0.5.0",
    "langchain-tavily>=0.0.1",
    "google-search-results>=2.4.2",
    "google-api-python-client>=2.100.0",
    
    # ----------------------------------
    # Database (SQLAlchemy v2 & PostgreSQL)
    # ----------------------------------
    "sqlalchemy>=2.0.30",
    "psycopg[binary,pool]>=3.2.0",
    "alembic>=1.13.0",
    "langgraph-checkpoint-postgres>=2.0.0",

    # ----------------------------------
    # Async Connectivity
    # ----------------------------------
    "requests>=2.32.0",
    "httpx>=0.28.0",

    # ----------------------------------
    # Retry & Error Handling
    # ----------------------------------
    "tenacity>=8.2.0",

    # ----------------------------------
    # Third-Party Integrations
    # ----------------------------------
    "razorpay==2.0.1",
]

[project.optional-dependencies]
# Local UI / Frontend modules
ui = [
    "streamlit>=1.47.0",
    "streamlit-lottie",
    "streamlit-option-menu",
    "streamlit-extras",
    "Pillow",
    "rich>=14.0.0",
]

# Testing framework
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=1.1.0",
]

[tool.setuptools]
packages = ["app"]